# cpp_client_telemetry

./: CMakeLists.txt
lib/: CMakeLists.txt  InstallMat.cmake  cpp-client-telemetry-config.cmake
lib/android_build/app/: build.gradle
lib/android_build/maesdk/src/main/cpp/: CMakeLists.txt  cpp-client-telemetry-config.cmake
lib/api/: CorrelationVector.cpp  LogManagerFactory.cpp  LogManagerImpl.cpp  LogManagerImpl.hpp  Logger.cpp
lib/decorators/: EventPropertiesDecorator.hpp
lib/http/: HttpClientFactory.cpp  HttpClientFactory.hpp  HttpClient_WinHttp.cpp  HttpClient_WinHttp.hpp  HttpClient_WinRt.cpp  HttpClient_WinRt.hpp
lib/include/mat/: config.h
lib/include/public/: ILogConfiguration.hpp  Version.hpp  mat.h
lib/offline/: OfflineStorage_SQLite.cpp  OfflineStorage_SQLite.hpp  SQLiteWrapper.hpp
lib/pal/: PAL.cpp  typename.hpp
lib/pal/desktop/: NetworkDetector.cpp  NetworkDetector.hpp  WindowsDesktopDeviceInformationImpl.cpp  WindowsDesktopNetworkInformationImpl.cpp  WindowsDesktopSystemInformationImpl.cpp
lib/pal/gamecore/: XSystem.h  gamecore.vcxitems  gamecore.vcxitems.filters
lib/pal/universal/: WindowsRuntimeDeviceInformationImpl.cpp  WindowsRuntimeNetworkInformationImpl.cpp  WindowsRuntimeSystemInformationImpl.cpp  pch.h
lib/shared/: PlatformHelpers.h
lib/stats/: Statistics.cpp
lib/utils/: FileUtils.cpp  StringUtils.cpp  StringUtils.hpp  Utils.cpp  Utils.hpp
tools/ports/cpp-client-telemetry/: portfile.cmake  vcpkg.json
tools/ports/cppwinrt/: portfile.cmake
tools/ports/mstelemetry/: portfile.cmake  vcpkg.json
